2007-03-07  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Darin.

        http://bugs.webkit.org/show_bug.cgi?id=13004
        Repeatedly calling XPathExpression.evaluate() causes crashes or memory leaks

        * fast/xpath/evaluate-twice-expected.txt: Added.
        * fast/xpath/evaluate-twice.html: Added.

2007-03-07  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Darin.

        - repaint test for http://bugs.webkit.org/show_bug.cgi?id=13002
          Incomplete repaint of inset outlines

        * fast/repaint/outline-inset-expected.checksum: Added.
        * fast/repaint/outline-inset-expected.png: Added.
        * fast/repaint/outline-inset-expected.txt: Added.
        * fast/repaint/outline-inset.html: Added.

2007-03-07  Rob Buis  <buis@kde.org>

        Reviewed by Darin.

        Adjusted tests for:
        http://bugs.webkit.org/show_bug.cgi?id=12579
        WebKit fails SVG xml:base test

        * dom/xhtml/level3/core/documentgetdocumenturi01-expected.txt:
        * dom/xhtml/level3/core/nodegetbaseuri01-expected.txt:
        * dom/xhtml/level3/core/nodegetbaseuri02-expected.txt:
        * dom/xhtml/level3/core/nodegetbaseuri04-expected.txt:
        * dom/xhtml/level3/core/nodegetbaseuri06-expected.txt:
        * svg/W3C-SVG-1.1/struct-image-07-t-expected.checksum:
        * svg/W3C-SVG-1.1/struct-image-07-t-expected.png:

2007-03-07  Darin Adler  <darin@apple.com>

        Reviewed by Geoff.

        - change tests that depend on the order of iteration of built-in properties
          to sort explicitly so they don't depend on the order any more

        * fast/dom/Window/resources/window-appendages-cleared-results.html:
        * fast/dom/Window/window-appendages-cleared-expected.txt:

        * fast/dom/Window/window-properties-expected.txt:
        * fast/dom/Window/window-properties.html:

        * fast/js/regexp-caching-expected.txt:
        * fast/js/regexp-caching.html:

2007-03-07  Alexey Proskuryakov  <ap@webkit.org>
