@@ -1,3 +1,13 @@
+2007-03-08  Alexey Proskuryakov  <ap@webkit.org>
+
+        Reviewed by Darin.
+
+        http://bugs.webkit.org/show_bug.cgi?id=13006
+        XPath string-value is broken for some node types
+
+        * fast/xpath/string-value-expected.txt: Added.
+        * fast/xpath/string-value.html: Added.
+
 2007-03-07  Alexey Proskuryakov  <ap@webkit.org>
 
         Reviewed by Darin.
